# slideflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/skills/slideflow-yaml-authoring/: SKILL.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  docs.yml  live-google-docs.yml  live-google-sheets.yml  live-google-slides.yml  release.yml  reusable-slideflow-build.yml  testpypi-dry-run.yml
docs/: agent-skills.md  ai-providers.md  ai_text_replacement.md  automation.md  changelog.md  charts.md  ci-quality.md  cli-reference.md  compatibility-policy.md  config-reference.md  contributing.md  cookbooks.md  data-connectors.md  data-transforms.md  dbt-migration.md  deployments.md  environment_setup.md  getting-started.md  google-service-accounts-shared-drives.md  index.md  phase2-audit.md  quickstart.md  release-process.md  replacements.md  security.md  slideflow_cli.md  template-authoring.md  template-catalog.md  templating.md  testing.md  troubleshooting.md
docs/engineering/: audit-plan.md
docs/javascripts/: mermaid-init.js
docs/providers/: google-docs.md  google-sheets.md  google-slides.md  powerpoint.md
docs/quickstart/: bar_chart.yml  config.yml  data.csv  registry.py
docs/quickstart/smoke/: config.yml  data.csv  params.csv  registry.py
docs/stylesheets/: extra.css  theme.css
live_tests/: test_live_google_slides_templates.py
scripts/ci/: check_live_validation_evidence.py  check_numpy_binary_compatibility.py  check_release_artifact_state.py  check_secret_hygiene.py  check_version_consistency.py  run_quickstart_smoke.sh  smoke_installed_wheel.sh  validate_release_branch.py
skills/slideflow-yaml-authoring/: SKILL.md
skills/slideflow-yaml-authoring/references/: config-schema-cheatsheet.md  gotchas.md  plotly-parameter-lookup.md  plotly-reference-index.json  template-authoring-contract.md
skills/slideflow-yaml-authoring/scripts/: generate_plotly_reference_index.py
slideflow/: __init__.py  citations.py  cli.py  constants.py
slideflow/ai/: __init__.py  providers.py  registry.py
slideflow/builtins/: __init__.py  column_utils.py  registry.py  table_utils.py  template_engine.py
slideflow/builtins/formatting/: __init__.py  color.py  format.py
slideflow/chart/: __init__.py  chart.py  utils.py
slideflow/chart/builtins/: __init__.py  bar.py  combo_chart.py  common.py  custom.py  grouped_bar.py  line.py  table.py  waterfall.py
slideflow/cli/: __init__.py  error_codes.py  json_output.py  main.py  theme.py  utils.py
slideflow/cli/commands/: __init__.py  _registry.py  build.py  doctor.py  sheets.py  templates.py  validate.py
slideflow/commands/: __init__.py  build.py  build_bulk.py  extract_sources.py  preview.py  utils.py  validate.py
slideflow/core/: __init__.py  registry.py
slideflow/data/: __init__.py  cache.py  data_manager.py
slideflow/data/connectors/: __init__.py  base.py  bigquery.py  common.py  connect.py  csv.py  databricks.py  dbt.py  duckdb.py  json.py  redshift.py
slideflow/presentation/: __init__.py  presentation.py  slide.py  user.py  utils.py
slideflow/presentations/: __init__.py  base.py  builder.py  charts.py  config.py  positioning.py  rate_limiter.py
slideflow/presentations/providers/: __init__.py  base.py  factory.py  google_docs.py  google_drive_ownership.py  google_slides.py  powerpoint.py
slideflow/replacements/: __init__.py  ai_text.py  base.py  table.py  text.py  utils.py
slideflow/templates/bars/: bar_basic.yml  bar_grouped.yml  bar_stacked.yml
slideflow/templates/combo/: combo_bar_line.yml
slideflow/templates/composition/: donut_breakdown.yml  funnel_stage.yml  heatmap_matrix.yml  waterfall_delta.yml
slideflow/templates/distribution/: box_distribution.yml  histogram_distribution.yml
slideflow/templates/kpi_cards/: kpi_card_delta.yml  kpi_card_single.yml
slideflow/templates/lines_areas/: area_stacked.yml  line_basic.yml  line_multi.yml  scatter_trend.yml
slideflow/utilities/: __init__.py  auth.py  config.py  data_transforms.py  dataframes.py  error_messages.py  exceptions.py  google_api.py  google_permissions.py  logging.py  rate_limiter.py  redaction.py
slideflow/utils/: __init__.py  config_loader.py  registry_loader.py
slideflow/workbooks/: __init__.py  base.py  builder.py  config.py
tests/: __init__.py  cli_test_helpers.py  conftest.py  test_ai_providers.py  test_ai_registry_additional.py  test_bigquery_connector.py  test_builtins_utilities.py  test_charts_coverage_runtime.py  test_citations.py  test_cli_commands.py  test_cli_doctor.py  test_cli_entrypoint.py  test_cli_json_output.py  test_cli_output_and_main.py  test_cli_registry_resolution.py  test_cli_sheets_build.py  test_cli_sheets_doctor.py  test_cli_sheets_validate.py  test_cli_templates_commands.py  test_compatibility_matrix.py  test_config_utilities.py  test_connectors_and_providers_unit.py  test_connectors_csv_json_connect.py  test_dbt_sanitization.py  test_duckdb_connector.py  test_error_messages.py  test_google_docs_provider_coverage.py  test_google_drive_ownership.py  test_google_sheets_workbook_provider.py  test_google_slides_provider_coverage.py  test_integration_cli_workflows.py  test_logging_module.py  test_plotly_chart_processing.py  test_positioning_and_registries.py  test_powerpoint_provider.py  test_presentation_render.py  test_property_data_pipeline.py  test_redaction.py  test_redshift_connector.py  test_release_scripts.py  (+11 more)
tests/live_tests/: test_live_google_docs_templates.py  test_live_google_sheets_workbooks.py  test_live_google_slides_templates.py
(+29 files in other folders)
