[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "slideflow-presentations"
version = "0.0.5"
description = "Automated Google Slides presentation builder with charts and data replacements."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Joe Broadhead" },
    { name = "Tom Lovett" }
]
dependencies = [
    "typer",
    "pydantic>=2.0",
    "pydantic[email]>=2.0",
    "pyyaml",
    "pandas>=2.2,<2.4",
    "numpy>=2.0,<2.5",
    "rich",
    "plotly",
    "kaleido",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "httplib2",
    "gitpython",
    "dbt-core",
    "dbt-databricks",
    "databricks-sql-connector",
]
requires-python = ">=3.12"

[project.optional-dependencies]
ai = ["openai", "google-genai"]
bigquery = ["google-cloud-bigquery", "dbt-bigquery"]
duckdb = ["duckdb", "dbt-duckdb"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "pymdown-extensions>=10.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-PyYAML",
]

[project.scripts]
slideflow = "slideflow.cli.main:app"

[tool.setuptools.packages.find]
include = ["slideflow*"]

[tool.setuptools.package-data]
slideflow = ["templates/**/*.yml"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: integration tests that may hit external systems",
    "e2e: end-to-end workflow tests",
    "live_google: live Google Slides API tests that create real presentations",
]
