[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "slideflow-presentations"
version = "0.0.6"
description = "Automated Google Slides presentation builder with charts and data replacements."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Joe Broadhead" },
    { name = "Tom Lovett" }
]
dependencies = [
    "typer>=0.24,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic[email]>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "pandas>=2.2,<2.4",
    "numpy>=2.0,<2.5",
    "rich>=13.0,<15.0",
    "plotly>=6.0,<7.0",
    "kaleido>=1.0,<2.0",
    "google-api-python-client>=2.0,<3.0",
    "google-auth>=2.0,<3.0",
    "google-auth-oauthlib>=1.0,<2.0",
    "google-auth-httplib2>=0.2,<1.0",
    "httplib2>=0.22,<1.0",
    "gitpython>=3.1.41,<4.0",
    "dbt-core>=1.10,<1.12",
    "dbt-databricks>=1.10,<1.12",
    "databricks-sql-connector>=4.0,<5.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
ai = ["openai>=1.0,<3.0", "google-genai>=1.0,<2.0"]
bigquery = ["google-cloud-bigquery>=3.0,<4.0", "dbt-bigquery>=1.10,<1.12"]
duckdb = ["duckdb>=1.0,<2.0", "dbt-duckdb>=1.9,<1.12"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "pymdown-extensions>=10.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-PyYAML",
]

[project.scripts]
slideflow = "slideflow.cli.main:app"

[tool.setuptools.packages.find]
include = ["slideflow*"]

[tool.setuptools.package-data]
slideflow = ["templates/**/*.yml"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: integration tests that may hit external systems",
    "e2e: end-to-end workflow tests",
    "live_google: live Google Slides API tests that create real presentations",
]
